--- a/AP2 LabPracTest/lab.html
+++ b/AP2 LabPracTest/lab.html
@@ -24,7 +24,7 @@
             Still journeying in this program, I hope to learn and gain significant skills that can help me in my
             future career.
         </p>
-        <p>You can <a href="#contact">contact me</a> if you want to learn more about me! &#128513;</p>
+        <p>Feel free to <a href="#contact">contact me</a> if you want to learn more about me! &#128513;</p>
 
 
         <h4>My Top 3 Pastimes:</h4>
