--- a/AP2 LabPracTest/lab.html
+++ b/AP2 LabPracTest/lab.html
@@ -50,7 +50,7 @@
 
 
         <h3 id="contact">Contact Me</h3>
-        <p>Email: <a href="mailto:kdeallesol@gmail">kdeallesol@gmail.com</a></p>
+        <p>Email: <a href="mailto:kdeallesol@gmail.com">kdeallesol@gmail.com</a></p>
         <br>
         <br>
         <footer>
