--- a/AP2 LabPracTest/lab.html
+++ b/AP2 LabPracTest/lab.html
@@ -14,7 +14,7 @@
     <div class="contents">
 
         <h1 class="name">KRYS DEA S. LLESOL</h1>
-        <img src="profile.jpg" alt="Dea's profile picture" style="width:400px;height:400px;">
+        <img src="profile.jpg" alt="Dea's profile picture" width="500">
         <br>
 
         <p>Hello, Dea is my name and art is my game. <del><i>Cringe.</i></del></p>
